--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
         pip install -r requirements.txt
         pip install pytest flake8
 
-    - name: Run flake8 (Lint)
-      run: flake8 .
+    # - name: Run flake8 (Lint)
+    #   run: flake8 .
 
     - name: Run pytest
       run: pytest tests/ --maxfail=1 --disable-warnings -q
